k8s/traefik/seafile.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: seafile.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
